[package]
name = "evmstar"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.13.0"
bytes = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
num = "*"
hex = "0.4.3"

[dev-dependencies]
evmstar-test = { path = ".", package = "evmstar"}